--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "backend-shopper",
-  "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.ts",
+  "type": "commonjs",
   "scripts": {
-    "start": "tsc && node dist/server.js",
-    "dev": "tsx watch src/server.js",
+    "start": "tsc && node build/server.js",
+    "dev": "nodemon --exec ts-node src/server.ts",
     "db:build": "npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
     "db:drop": "npx sequelize-cli db:drop"
   },
@@ -13,19 +13,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.17.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "pg": "^8.12.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.3"
+    "pg": "^8.4.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.20",
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "eslint": "^8.19.0",
-    "sequelize-cli": "^6.6.2",
-    "tsx": "^4.19.0",
-    "typescript": "^5.5.4",
+    "@types/node": "^22.5.1",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6"
+    "@typescript-eslint/parser": "^5.30.6",
+    "eslint": "^8.19.0",
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
