--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,22 @@ services:
       - ./pgdata:/var/lib/postgres/data
     ports:
       - "5433:5432"
+  api:
+    image: node:latest
+    container_name: api
+    restart: always
+    env_file: ./.env
+    depends_on:
+      - postgres
+    ports:
+      - 3001:3001
+    volumes:
+      - .:/usr/src/app
+    working_dir: /usr/src/app
+    command: > 
+      bash -c "npm install && npm start"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "5"
